--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
      N/A
     </td>
     <td>
-      <a href="lectures/lec02_notes.pdf">[scribe notes]</a>
+      <!-- <a href="lectures/lec02_notes.pdf">[scribe notes]</a> -->
      <ul><li>Yinghui He</li><li>Haichen Dong</li><li>Brendan Y. Wang</li></ul>
     </td>
    </tr>
@@ -308,8 +308,29 @@
     </td>
     <td>
      Emergent behavior
+     <br/>
+     <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2206.07682">
+        Emergent Abilities of Large Language Models
+       </a>
+      </li>
+      <li>
+       <a href="assets/arora_goyal.pdf">
+        A Theory for Emergence of Complex Skills in Language Models,
+       </a>
+       Sections 1-3 and 6-8. No need to understand the math.
+      </li>
+     </ul>
     </td>
     <td>
+        <ul>
+            <li>
+                <a href="https://en.wikipedia.org/wiki/Emergence">
+                    Wikipedia entry on Emergence
+                </a>
+            </li>
+        </ul>
     </td>
     <td>
     </td>
