Update paper list

--- a/index.html
+++ b/index.html
@@ -228,17 +228,17 @@
       </li>
       <li>
        <a href="https://arxiv.org/abs/2402.00838">
-        OLMo: Accelerating the Science of Language Models
+        OLMo
        </a>
       </li>
       <li>
        <a href="https://arxiv.org/abs/2407.10671">
-        Qwen2 Technical Report
+        Qwen2
        </a>
       </li>
       <li>
        <a href="https://arxiv.org/abs/2406.03476">
-        Does your data spark joy? Performance gains from domain upsampling at the end of training
+        Data annealing (Databricks)
        </a>
       </li>
      </ul>
