Update the debate topics

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <ul>
           <li><b>Class participation (30%)</b>: In each class, we will cover 1-2 papers (see "required reading" in the schedule). You are required to read these papers in depth beforehand, and answer a pre-lecture question form before the class (there is a Google form linked in the schedule). These are due at <b>11:59pm on the day before the lecture</b>. Some questions are designed to test your understanding of the reading materials, and some questions are open-ended and prompt you to read the paper critically and write down your thoughts. This counts towards class participation - we will not grade the correctness but we will expect you to do the work, and submit reasonable answers. 
           </li>
-          <li><b>Debate (15%)</b>: We will schedule 12 debate panels in the class from Week 4 to Week 9, with each panel consisting of 5 students and lasting 30 minutes (the lectures will be reduced to 50 minutes). Each panel will focus on one research paper (or two) related to the lecture topic of that day, and will comprise of the following structure: 
+          <li><b>Debate (15%)</b>: We will schedule 12 debate panels in the class from Week 4 to Week 9, with each panel consisting of 5 students and lasting 30 minutes (the lectures will be reduced to 50 minutes). Each panel will focus on one research paper (or two) related to the topics that have been taught so far, and will comprise of the following structure: 
             <ul>
                 <li>Each panel will be composed of 1 presenter, 2 critics, and 2 proponents.</li>
                 <li>The presenter will start with a short presentation (8 minutes) of the paper.</li>
