add lec4, update cs105

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <td>Lectures</td> <td>Monday/Wednesday 10:30-11:50am</td>
         </tr>
         <tr>
-        <td>Location</td> <td><a href="https://classroominfo.princeton.edu/View.aspx?bl_id=0616&fl_id=A&rm_id=0616_A_CC12&bc=FRIEN&img=0616008.JPG&rn=008">Friend Center 008</a></td>
+        <td>Location</td> <td><a href="https://www.cs.princeton.edu/general/images/105-auditorium-0">CS Building 105</a></td>
         </tr>
         <tr>
         <td>Office hours</td> 
@@ -263,7 +263,7 @@
      Sanjeev
     </td>
     <td>
-     Scaling laws
+     Scaling laws <a href="/lectures/lec04.pdf">[slides]</a>
      <br/>
      <ul>
       <li>
