--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@
             Scaling Laws for Neural Language Models
           </a>
         </li>
+        <li>
+          <a href="https://arxiv.org/abs/2401.00448">
+            Beyond Chinchilla-Optimal: Accounting for Inference in Language Model Scaling Laws
+          </a>
+        </li>
       </ul>
     </td>
     <td>
@@ -332,11 +337,11 @@
                     Wikipedia entry on Emergence
                 </a>
             </li>
-            <li>
+<!--             <li>
                 <a href="https://arxiv.org/abs/2304.15004">
                   Are Emergent Abilities of Large Language Models a Mirage?  
                 </a>
-            </li>
+            </li> -->
         </ul>
     </td>
     <td>
@@ -372,6 +377,7 @@
     <td>
     </td>
     <td>
+     Paper: <a href="https://arxiv.org/abs/2309.05463">Phi-1.5</a> <b>"More data or better data?"</b><br/>
      Presenter: Kellen Cheng<br/>
  Critics: <ul><li>Erich Liang</li><li>Tanvi Namjoshi</li></ul>
  Proponents: <ul><li>Simran Kaur</li><li>Tedi Zadouri</li></ul>
@@ -403,6 +409,7 @@
     <td>
     </td>
     <td>
+     Paper: <a href="https://arxiv.org/abs/2304.15004">Schaeffer et al 2023</a> <b>"Are emergent abilities a mirage?"</b><br/>
      Presenter: Mingqian Xue<br/>
  Critics: <ul><li>Lekang Yuan</li><li>Heyu Guo</li></ul>
  Proponents: <ul><li>Qishuo Yin</li><li>Lihan Zha</li></ul>
@@ -661,10 +668,10 @@
      Nov 4 (Mon)
     </td>
     <td>
-     TBD
+     Mengzhou
     </td>
     <td>
-     Topic TBD
+     Code and math models
     </td>
     <td>
     </td>
