--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
      Danqi
     </td>
     <td>
-     Data preparation 1
+     Data curation
      <br/>
      <ul>
       <li>
@@ -373,6 +373,12 @@
      </ul>
     </td>
     <td>
+      <ul>
+      <li> <a href="https://arxiv.org/abs/2406.11794">DataComp-LM</a></li>
+      <li> <a href="https://arxiv.org/abs/2406.17557">FineWeb</a></li>
+      <li> <a href="https://arxiv.org/abs/2306.01116">RefinedWeb</a></li>
+      <li> <a href="https://arxiv.org/abs/2402.09739">QuRating</a></li>
+    </ul>
     </td>
     <td>
     </td>
@@ -394,17 +400,22 @@
      Danqi
     </td>
     <td>
-     Data preparation 2
-     <br/>
-     <ul>
-      <li>
-       <a href="https://arxiv.org/abs/2406.11794">
-        DataComp-LM: In search of the next generation of training sets for language models
-       </a>
-      </li>
+      Post-training: Instruction tuning
+      <ul>
+      <li> <a href="https://arxiv.org/abs/2210.11416">Scaling Instruction-Finetuned Language Models</a></li>
      </ul>
     </td>
     <td>
+      <ul>
+      <li>
+       <a href="https://arxiv.org/abs/2109.01652">
+        Finetuned Language Models Are Zero-Shot Learners
+       </a>
+      </li>
+      <li><a href="https://arxiv.org/abs/2306.04751">Tülu</a></li>
+      <li><a href="https://arxiv.org/abs/2311.10702">Tulu 2</a></li>
+      <li><a href="https://arxiv.org/abs/2402.04333">LESS: Selecting Influential Data for Targeted Instruction Tuning</a></li>
+     </ul>
     </td>
     <td>
     </td>
@@ -427,33 +438,44 @@
      Danqi
     </td>
     <td>
-     Post-training 1
-     <br/>
-     <ul>
+      Post-training: learning from preferences
+      <ul>
+        <li>
+       <a href="https://arxiv.org/abs/2203.02155">
+       Training language models to follow instructions with human feedback
+       </a>
+     </li>
+       <li>
+       <a href="https://arxiv.org/abs/2305.18290">
+        Direct Preference Optimization: Your Language Model is Secretly a Reward Model
+       </a>
+      </li>
+    </ul>
+    </td>
+    <td>
+      <ul>
       <li>
-       <a href="https://arxiv.org/abs/2210.11416">
-        Scaling Instruction-Finetuned Language Models
+       <a href="https://arxiv.org/abs/2406.09279">
+        Unpacking DPO and PPO
+       </a>
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2407.21783">
+        Llama 3
+       </a>
+       , Section 4
+      </li>
+      <li>
+       <a href="https://arxiv.org/abs/2405.14734">
+        SimPO
        </a>
       </li>
      </ul>
     </td>
     <td>
-     <ul>
-      <li>
-       <a href="https://arxiv.org/abs/2109.01652">
-        Finetuned Language Models Are Zero-Shot Learners
-       </a>
-      </li>
-      <li>
-       <a href="https://arxiv.org/abs/2311.10702">
-        Camels in a Changing Climate: Enhancing LM Adaptation with Tulu 2
-       </a>
-      </li>
-     </ul>
     </td>
     <td>
-    </td>
-    <td>
+      Paper: <a href="https://arxiv.org/abs/2404.07177">Scaling Laws for Data Filtering</a><br>
      Presenter: Tamjeed Azad<br/>
  Critics: <ul><li>Elizabeth A. Mieczkowski</li><li>Nimra Nadeem</li></ul>
  Proponents: <ul><li>Iain D. Campbell</li><li>Junita Sirait</li></ul>
@@ -467,52 +489,17 @@
      Oct 2 (Wed)
     </td>
     <td>
-     Danqi
+     Sanjeev
     </td>
     <td>
-     Post-training 2
-     <br/>
-     <ul>
-      <li>
-       <a href="https://arxiv.org/abs/2203.02155">
-        Training language models to follow instructions with human feedback
-       </a>
-      </li>
-      <li>
-       <a href="https://arxiv.org/abs/2305.18290">
-        Direct Preference Optimization: Your Language Model is Secretly a Reward Model
-       </a>
-      </li>
-     </ul>
-    </td>
-    <td>
-     <ul>
-      <li>
-       <a href="https://arxiv.org/abs/2406.09279">
-        Unpacking DPO and PPO: Disentangling Best Practices for Learning from Preference Feedback
-       </a>
-      </li>
-      <li>
-       <a href="https://arxiv.org/abs/2404.10719">
-        Is DPO Superior to PPO for LLM Alignment? A Comprehensive Study
-       </a>
-      </li>
-      <li>
-       <a href="https://arxiv.org/abs/2407.21783">
-        The Llama 3 Herd of Models
-       </a>
-       , Section 4
-      </li>
-      <li>
-       <a href="https://arxiv.org/abs/2405.14734">
-        SimPO: Simple Preference Optimization with a Reference-Free Reward
-       </a>
-      </li>
-     </ul>
+     Alignment
     </td>
     <td>
     </td>
     <td>
+    </td>
+    <td>
+      Paper: <a href="https://arxiv.org/abs/2305.11206">LIMA: Less Is More for Alignment</a><br>
      Presenter: Ahmed Bayoumi<br/>
  Critics: <ul><li>Tiffany T. Liu</li><li>Zeyu Shen</li></ul>
  Proponents: <ul><li>Jiaxin Xiao</li><li>Wuwei Zhang</li></ul>
@@ -530,13 +517,14 @@
      Sanjeev
     </td>
     <td>
-     Alignment
+     Constitutional AI
     </td>
     <td>
     </td>
     <td>
     </td>
     <td>
+      Paper: <a href="https://arxiv.org/abs/2404.10719">Is DPO Superior to PPO for LLM Alignment?</a><br>
      Presenter: Boyi Wei<br/>
  Critics: <ul><li>Xingyu Zhu</li><li>Veniamin Veselovskyy</li></ul>
  Proponents: <ul><li>Benedikt P. Stroebl</li><li>Kincaid MacDonald</li></ul>
@@ -553,7 +541,7 @@
      Sanjeev
     </td>
     <td>
-     Constitutional AI
+     Evaluation
     </td>
     <td>
     </td>
@@ -574,10 +562,10 @@
      Oct 21 (Mon)
     </td>
     <td>
-     TBD
+     Tianyu
     </td>
     <td>
-     Evaluation 1
+     TBD
     </td>
     <td>
     </td>
@@ -600,7 +588,7 @@
      TBD
     </td>
     <td>
-     Evaluation 2
+     TBD
     </td>
     <td>
     </td>
