--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
      Sanjeev
     </td>
     <td>
-     Emergent behavior
+     Emergent behavior <a href="lectures/lec05.pdf">[slides]</a>
      <br/>
      <ul>
       <li>
