Added readings (optional) for 18th

--- a/index.html
+++ b/index.html
@@ -337,11 +337,11 @@
                     Wikipedia entry on Emergence
                 </a>
             </li>
-<!--             <li>
-                <a href="https://arxiv.org/abs/2304.15004">
-                  Are Emergent Abilities of Large Language Models a Mirage?  
+             <li>
+                <a href="https://arxiv.org/abs/2310.17567">
+                  Skill-Mix: a Flexible and Expandable Family of Evaluations for AI models  
                 </a>
-            </li> -->
+            </li>
         </ul>
     </td>
     <td>
