Update presenter for Sep 23

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     </td>
     <td>
      Paper: <a href="https://arxiv.org/abs/2309.05463">Phi-1.5</a> <b>"More data or better data?"</b><br/>
-     Presenter: Kellen Cheng<br/>
+     Presenter: Victor Chu<br/>
  Critics: <ul><li>Erich Liang</li><li>Tanvi Namjoshi</li></ul>
  Proponents: <ul><li>Simran Kaur</li><li>Tedi Zadouri</li></ul>
     </td>
