--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
        </a>
       </li>
       <li>
-       <a href="assets/arora_goyal.pdf">
+       <a href="https://arxiv.org/pdf/2307.15936">
         A Theory for Emergence of Complex Skills in Language Models,
        </a>
        Sections 1-3 and 6-8. No need to understand the math.
