final update of scribes/panels

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     </td>
     <td>
      Paper: <a href="https://arxiv.org/abs/2309.05463">Phi-1.5</a> <b>"More data or better data?"</b><br/>
-     Presenter: Kellen Cheng<br/>
+     Presenter: Victor Chu<br/>
  Critics: <ul><li>Erich Liang</li><li>Tanvi Namjoshi</li></ul>
  Proponents: <ul><li>Simran Kaur</li><li>Tedi Zadouri</li></ul>
     </td>
@@ -481,10 +481,10 @@
       Paper: <a href="https://arxiv.org/abs/2404.07177">Scaling Laws for Data Filtering</a><br>
      Presenter: Tamjeed Azad<br/>
  Critics: <ul><li>Elizabeth A. Mieczkowski</li><li>Nimra Nadeem</li></ul>
- Proponents: <ul><li>Iain D. Campbell</li><li>Junita Sirait</li></ul>
+ Proponents: <ul><li>Iain D. Campbell</li><li>Jiahao Qiu</li></ul>
     </td>
     <td>
-     <ul><li>Kincaid MacDonald</li><li>Amey P. Pasarkar</li><li>Kathryn L. Wantlin</li></ul>
+     <ul><li>Kincaid MacDonald</li><li>Amey P. Pasarkar</li><li>Nobline Yoo</li></ul>
     </td>
    </tr>
    <tr>
@@ -503,8 +503,8 @@
     </td>
     <td>
       Paper: <a href="https://arxiv.org/abs/2305.11206">LIMA: Less Is More for Alignment</a><br>
-     Presenter: Ahmed Bayoumi<br/>
- Critics: <ul><li>Tiffany T. Liu</li><li>Zeyu Shen</li></ul>
+     Presenter: Mahsa Bastankhah<br/>
+ Critics: <ul><li>Niusha Moshrefi</li><li>Zeyu Shen</li></ul>
  Proponents: <ul><li>Jiaxin Xiao</li><li>Wuwei Zhang</li></ul>
     </td>
     <td>
@@ -533,7 +533,7 @@
  Proponents: <ul><li>Benedikt P. Stroebl</li><li>Kincaid MacDonald</li></ul>
     </td>
     <td>
-     <ul><li>Juhyun Park</li><li>Gwangho Lee</li><li>Ahmed Bayoumi</li></ul>
+     <ul><li>Juhyun Park</li><li>Wentao Guo</li><li>Mahsa Bastankhah</li></ul>
     </td>
    </tr>
    <tr>
@@ -556,7 +556,7 @@
  Proponents: <ul><li>Sreemanti Dey</li><li>Jane E. Castleman</li></ul>
     </td>
     <td>
-     <ul><li>Wenzhe Li</li><li>Mingqian Xue</li><li>Andre Niyongabo Rubungo</li></ul>
+     <ul><li>Wenzhe Li</li><li>Mingqian Xue</li><li>Rafael Pastrana Jimenez</li></ul>
     </td>
    </tr>
    <!-- week 7 -->
@@ -580,7 +580,7 @@
  Proponents: <ul><li>Yuka Shu</li><li>Keerthana Nallamotu</li></ul>
     </td>
     <td>
-     <ul><li>Kellen Cheng</li><li>Yijun Yin</li><li>Lihan Zha</li></ul>
+     <ul><li>Victor Chu</li><li>Yijun Yin</li><li>Lihan Zha</li></ul>
     </td>
    </tr>
    <tr>
@@ -598,8 +598,8 @@
     <td>
     </td>
     <td>
-     Presenter: Kaiqu Liang<br/>
- Critics: <ul><li>Andre Niyongabo Rubungo</li><li>Zhicheng Zheng</li></ul>
+     Presenter: Ambri Ma<br/>
+ Critics: <ul><li>Rafael Pastrana Jimenez</li><li>Zhicheng Zheng</li></ul>
  Proponents: <ul><li>Brendan Y. Wang</li><li>David B. Braun</li></ul>
     </td>
     <td>
@@ -624,10 +624,10 @@
     <td>
      Presenter: Jiayi Zhang<br/>
  Critics: <ul><li>Catherine Cheng</li><li>Juhyun Park</li></ul>
- Proponents: <ul><li>Gwangho Lee</li><li>Sijia Liu</li></ul>
+ Proponents: <ul><li>Wentao Guo</li><li>Sijia Liu</li></ul>
     </td>
     <td>
-     <ul><li>Tiffany T. Liu</li><li>Zhicheng Zheng</li><li>Zixuan Wang</li></ul>
+     <ul><li>Niusha Moshrefi</li><li>Zhicheng Zheng</li><li>Zixuan Wang</li></ul>
     </td>
    </tr>
    <tr>
@@ -670,7 +670,7 @@
     </td>
     <td>
      Presenter: Ziyu Xiong<br/>
- Critics: <ul><li>Kathryn L. Wantlin</li><li>Creston A. Brooks</li></ul>
+ Critics: <ul><li>Nobline Yoo</li><li>Creston A. Brooks</li></ul>
  Proponents: <ul><li>Stanley Wei</li><li>Lucy He</li></ul>
     </td>
     <td>
@@ -694,7 +694,7 @@
     <td>
      Presenter: Alexandre Kirchmeyer<br/>
  Critics: <ul><li>Wenzhe Li</li><li>Kylie Zhang</li></ul>
- Proponents: <ul><li>Yingqing Guo</li></ul>
+ Proponents: <ul><li>Yingqing Guo</li><li>Joie Y . Zhang</li></ul>
     </td>
     <td>
      <ul><li>Sreemanti Dey</li><li>Xingyu Zhu</li><li>Colin Wang</li></ul>
@@ -719,7 +719,7 @@
      N/A
     </td>
     <td>
-     <ul><li>Alexandre Kirchmeyer</li><li>Lucy He</li><li>Junita Sirait</li></ul>
+     <ul><li>Alexandre Kirchmeyer</li><li>Lucy He</li><li>Jiahao Qiu</li></ul>
     </td>
    </tr>
    <tr>
@@ -740,7 +740,7 @@
      N/A
     </td>
     <td>
-     <ul><li>Cyrus Vachha</li><li>Varun Satish</li><li>Kaiqu Liang</li></ul>
+     <ul><li>Cyrus Vachha</li><li>Tanvi Namjoshi</li><li>Ambri Ma</li></ul>
     </td>
    </tr>
    <!-- week 11 -->
@@ -783,7 +783,7 @@
      N/A
     </td>
     <td>
-     <ul><li>Constantin Schesch</li><li>Yuka Shu</li></ul>
+     <ul><li>Constantin Schesch</li><li>Yuka Shu</li><li>Joie Y . Zhang</li></ul>
     </td>
    </tr>
 
