swap conflicts for COLM

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
  Proponents: <ul><li>Jiaxin Xiao</li><li>Wuwei Zhang</li></ul>
     </td>
     <td>
-     <ul><li>Nimra Nadeem</li><li>Stanley Wei</li><li>Veniamin Veselovskyy</li></ul>
+     <ul><li>Nimra Nadeem</li><li>Stanley Wei</li><li>Cyrus Vachha</li></ul>
     </td>
    </tr>
    <!-- week 6 -->
@@ -552,7 +552,7 @@
     </td>
     <td>
      Presenter: Zixuan Wang<br/>
- Critics: <ul><li>Colin Wang</li><li>Dillon Lue</li></ul>
+ Critics: <ul><li>Rafael Pastrana Jimenez</li><li>Dillon Lue</li></ul>
  Proponents: <ul><li>Sreemanti Dey</li><li>Jane E. Castleman</li></ul>
     </td>
     <td>
@@ -576,7 +576,7 @@
     </td>
     <td>
      Presenter: Arin J. Mukherjee<br/>
- Critics: <ul><li>Seth Karten</li><li>Cyrus Vachha</li></ul>
+ Critics: <ul><li>Seth Karten</li><li>Veniamin Veselovskyy</li></ul>
  Proponents: <ul><li>Yuka Shu</li><li>Keerthana Nallamotu</li></ul>
     </td>
     <td>
@@ -599,7 +599,7 @@
     </td>
     <td>
      Presenter: Ambri Ma<br/>
- Critics: <ul><li>Rafael Pastrana Jimenez</li><li>Zhicheng Zheng</li></ul>
+ Critics: <ul><li>Colin Wang</li><li>Zhicheng Zheng</li></ul>
  Proponents: <ul><li>Brendan Y. Wang</li><li>David B. Braun</li></ul>
     </td>
     <td>
