--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
     </td>
     <td>
      Presenter: Arin J. Mukherjee<br/>
- Critics: <ul><li>Seth Karten</li><li>Veniamin Veselovskyy</li></ul>
+ Critics: <ul><li>Seth Karten</li><li>Cyrus Vachha</li></ul>
  Proponents: <ul><li>Yuka Shu</li><li>Keerthana Nallamotu</li></ul>
     </td>
     <td>
@@ -740,7 +740,7 @@
      N/A
     </td>
     <td>
-     <ul><li>Cyrus Vachha</li><li>Tanvi Namjoshi</li><li>Ambri Ma</li></ul>
+     <ul><li>Veniamin Veselovskyy</li><li>Tanvi Namjoshi</li><li>Ambri Ma</li></ul>
     </td>
    </tr>
    <!-- week 11 -->
