Add reading response form for the 22nd

--- a/index.html
+++ b/index.html
@@ -384,6 +384,9 @@
     </ul>
     </td>
     <td>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSelzpIYZxHb06nTXbwmV0DAZb_iq0U5MWYIBziU0OBahWZ6ZQ/viewform">
+            [link]
+        </a>
     </td>
     <td>
      Paper: <a href="https://arxiv.org/abs/2309.05463">Phi-1.5</a> <b>"More data or better data?"</b><br/>
