Add lec06 slides

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         </tr>
         <tr>
         <td>Feedback form</td><td><a href="https://forms.gle/vUD1RieC1YcBSugw7">https://forms.gle/vUD1RieC1YcBSugw7</a></td>
-        <tr>
-        <td>Zoom Link (Princeton only)</td><td><a href="https://princeton.zoom.us/j/95623350286">https://princeton.zoom.us/j/95623350286</a></td>
-        <tr>
+        </tr>
+<!--         <td>Zoom Link (Princeton only)</td><td><a href="https://princeton.zoom.us/j/95623350286">https://princeton.zoom.us/j/95623350286</a></td>
+        <tr> -->
         </tbody>
         </table>
 
@@ -365,7 +365,7 @@
      Danqi
     </td>
     <td>
-     Data curation
+     Data curation <a href="lectures/lec06.pdf">[slides]</a>
      <br/>
      <ul>
       <li>
@@ -377,9 +377,9 @@
     </td>
     <td>
       <ul>
-      <li> <a href="https://arxiv.org/abs/2406.11794">DataComp-LM</a></li>
       <li> <a href="https://arxiv.org/abs/2406.17557">FineWeb</a></li>
       <li> <a href="https://arxiv.org/abs/2306.01116">RefinedWeb</a></li>
+      <li> <a href="https://arxiv.org/abs/2406.11794">DataComp-LM</a></li>
       <li> <a href="https://arxiv.org/abs/2402.09739">QuRating</a></li>
     </ul>
     </td>
