fix panel again

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
     <td>
       Paper: <a href="https://arxiv.org/abs/2404.10719">Is DPO Superior to PPO for LLM Alignment?</a><br>
      Presenter: Boyi Wei<br/>
- Critics: <ul><li>Xingyu Zhu</li><li>Veniamin Veselovskyy</li></ul>
+ Critics: <ul><li>Xingyu Zhu</li><li>Cyrus Vachha</li></ul>
  Proponents: <ul><li>Benedikt P. Stroebl</li><li>Kincaid MacDonald</li></ul>
     </td>
     <td>
@@ -579,7 +579,7 @@
     </td>
     <td>
      Presenter: Arin J. Mukherjee<br/>
- Critics: <ul><li>Seth Karten</li><li>Cyrus Vachha</li></ul>
+ Critics: <ul><li>Seth Karten</li><li>Veniamin Veselovskyy</li></ul>
  Proponents: <ul><li>Yuka Shu</li><li>Keerthana Nallamotu</li></ul>
     </td>
     <td>
