Add reading form for lecture 7

--- a/index.html
+++ b/index.html
@@ -413,17 +413,15 @@
     </td>
     <td>
       <ul>
-      <li>
-       <a href="https://arxiv.org/abs/2109.01652">
-        Finetuned Language Models Are Zero-Shot Learners
-       </a>
-      </li>
+      <li><a href="https://arxiv.org/abs/2109.01652">Finetuned Language Models Are Zero-Shot Learners</a></li>
+      <li><a href="https://arxiv.org/abs/2301.13688">The Flan Collection</a></li>
       <li><a href="https://arxiv.org/abs/2306.04751">Tülu</a></li>
       <li><a href="https://arxiv.org/abs/2311.10702">Tulu 2</a></li>
       <li><a href="https://arxiv.org/abs/2402.04333">LESS: Selecting Influential Data for Targeted Instruction Tuning</a></li>
      </ul>
     </td>
     <td>
+      <a href="https://forms.gle/tLrDiy9AgTVhAN6C7">[link]</a>
     </td>
     <td>
      Paper: <a href="https://arxiv.org/abs/2304.15004">Schaeffer et al 2023</a> <b>"Are emergent abilities a mirage?"</b><br/>
