Add lec07 slides

--- a/index.html
+++ b/index.html
@@ -406,18 +406,19 @@
      Danqi
     </td>
     <td>
-      Post-training: Instruction tuning
+      Post-training: Instruction tuning <a href="lectures/lec07.pdf">[slides]</a>
       <ul>
       <li> <a href="https://arxiv.org/abs/2210.11416">Scaling Instruction-Finetuned Language Models</a></li>
      </ul>
     </td>
     <td>
       <ul>
-      <li><a href="https://arxiv.org/abs/2109.01652">Finetuned Language Models Are Zero-Shot Learners</a></li>
+      <li><a href="https://arxiv.org/abs/2109.01652">FLAN</a></li>
       <li><a href="https://arxiv.org/abs/2301.13688">The Flan Collection</a></li>
       <li><a href="https://arxiv.org/abs/2306.04751">Tülu</a></li>
       <li><a href="https://arxiv.org/abs/2311.10702">Tulu 2</a></li>
-      <li><a href="https://arxiv.org/abs/2402.04333">LESS: Selecting Influential Data for Targeted Instruction Tuning</a></li>
+      <li><a href="https://arxiv.org/abs/2402.04333">LESS</a></li>
+      <li>Sebastian Ruder's blog posts: <a href="https://newsletter.ruder.io/p/instruction-tuning-vol-1">[1]</a><a href="https://newsletter.ruder.io/p/instruction-tuning-vol-2">[2]</a></li>
      </ul>
     </td>
     <td>
