--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
       Paper: <a href="https://arxiv.org/abs/2404.07177">Scaling Laws for Data Filtering</a><br>
      Presenter: Tamjeed Azad<br/>
  Critics: <ul><li>Elizabeth A. Mieczkowski</li><li>Nimra Nadeem</li></ul>
- Proponents: <ul><li>Iain D. Campbell</li><li>Jiahao Qiu</li></ul>
+ Proponents: <ul><li>Iain D. Campbell</li><li>Zhicheng Zheng</li></ul>
     </td>
     <td>
      <ul><li>Kincaid MacDonald</li><li>Amey P. Pasarkar</li><li>Nobline Yoo</li></ul>
@@ -601,7 +601,7 @@
     </td>
     <td>
      Presenter: Ambri Ma<br/>
- Critics: <ul><li>Colin Wang</li><li>Zhicheng Zheng</li></ul>
+ Critics: <ul><li>Colin Wang</li><li>Jiahao Qiu</li></ul>
  Proponents: <ul><li>Brendan Y. Wang</li><li>David B. Braun</li></ul>
     </td>
     <td>
