--- a/index.html
+++ b/index.html
@@ -498,6 +498,9 @@
     </td>
     <td>
      Alignment
+      <ul>
+      <li> <a href="https://arxiv.org/abs/2112.00861">A General Language Assistant as a Laboratory for Alignment</a></li>
+     </ul>
     </td>
     <td>
     </td>
@@ -523,6 +526,9 @@
     </td>
     <td>
      Constitutional AI
+      <ul>
+      <li> <a href="https://arxiv.org/abs/2212.08073">Constitutional AI: Harmlessness from AI Feedback</a></li>
+     </ul>
     </td>
     <td>
     </td>
@@ -546,7 +552,7 @@
      Sanjeev
     </td>
     <td>
-     Evaluation
+     LLM Metacognition
     </td>
     <td>
     </td>
@@ -577,6 +583,7 @@
     <td>
     </td>
     <td>
+      Paper: <a href="https://arxiv.org/abs/2406.06560">Inverse Constitutional AI: Compressing Preferences into Principles</a><br>
      Presenter: Arin J. Mukherjee<br/>
  Critics: <ul><li>Seth Karten</li><li>Veniamin Veselovskyy</li></ul>
  Proponents: <ul><li>Yuka Shu</li><li>Keerthana Nallamotu</li></ul>
