Add reading response form for lecture 8

--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
      </ul>
     </td>
     <td>
+      <a href="https://forms.gle/yUgPkjBc6BwpkwN27">[link]</a>
     </td>
     <td>
       Paper: <a href="https://arxiv.org/abs/2404.07177">Scaling Laws for Data Filtering</a><br>
