Update final project proposal deadline

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <li>Please also add the four course instructors on the Overleaf as editors at our emails above. </li>
                 <li>New to the template is a <b>contributions section</b>, please do fill this out when you submit with an overview of each scribe's split.</li>
             </ul></li>
-          <li><b>Final project (35% + 10% for presentations)</b>: At the end of the semester, everyone is required to do a class project related to modern LLMs and submit a final paper. You should work as a <b>team of 2 or 3</b>. Everyone is required to submit a proposal by <b>Oct 7th 11:59pm</b>, and the final paper on the Dean's Date (<b>Dec 13th 11:59 pm</b>). In-class project presentations will be scheduled in the last three lectures.
+          <li><b>Final project (35% + 10% for presentations)</b>: At the end of the semester, everyone is required to do a class project related to modern LLMs and submit a final paper. You should work as a <b>team of 2 or 3</b>. Everyone is required to submit a proposal by <b>Oct 13th (Sunday) 11:59pm</b>, and the final paper on the Dean's Date (<b>Dec 13th 11:59 pm</b>). In-class project presentations will be scheduled in the last three lectures.
           </li><br>
       </ul>
 
