Update scribes for Oct 2

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
  Proponents: <ul><li>Jiaxin Xiao</li><li>Wuwei Zhang</li></ul>
     </td>
     <td>
-     <ul><li>Nimra Nadeem</li><li>Stanley Wei</li><li>Cyrus Vachha</li></ul>
+     <ul><li><s>Nimra Nadeem</s></li><li>Stanley Wei</li><li>Cyrus Vachha</li></ul>
     </td>
    </tr>
    <!-- week 6 -->
