Add lec08 lecture

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
      Danqi
     </td>
     <td>
-      Post-training: learning from preferences
+      Post-training: learning from preferences <a href="lectures/lec08.pdf">[slides]</a>
       <ul>
         <li>
        <a href="https://arxiv.org/abs/2203.02155">
