add lec 9 reading form

--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@
     <td>
     </td>
     <td>
+        <a href="https://forms.gle/7v4GaXfJhMgJKadK9">[link]</a>
     </td>
     <td>
       Paper: <a href="https://arxiv.org/abs/2305.11206">LIMA: Less Is More for Alignment</a><br>
