Add slides for Oct 2

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
      Sanjeev
     </td>
     <td>
-     Alignment
+     Alignment <a href="lectures/lec9-Alignment.pdf">[slides]</a>
       <ul>
       <li> <a href="https://arxiv.org/abs/2112.00861">A General Language Assistant as a Laboratory for Alignment</a></li>
      </ul>
