Add additional reading for Oct 2

--- a/index.html
+++ b/index.html
@@ -504,6 +504,11 @@
      </ul>
     </td>
     <td>
+        <ul>
+            <li>
+                <a href="https://dibyaghosh.com/blog/probability/kldivergence.html">The RL probabilist blog on forward and reverse KL</a>
+            </li>
+        </ul>
     </td>
     <td>
         <a href="https://forms.gle/7v4GaXfJhMgJKadK9">[link]</a>
