add lecs surveys

--- a/index.html
+++ b/index.html
@@ -538,8 +538,14 @@
      </ul>
     </td>
     <td>
+        <ul>
+            <li>
+                <a href="https://huggingface.co/datasets/HuggingFaceH4/hhh_alignment">HHH Dataset (just look at some examples)</a>
+            </li>
+        </ul>
     </td>
     <td>
+        <a href="https://forms.gle/LTijRvpGhELEQmbi7">[link]</a>
     </td>
     <td>
       Paper: <a href="https://arxiv.org/abs/2404.10719">Is DPO Superior to PPO for LLM Alignment?</a><br>
@@ -560,10 +566,24 @@
     </td>
     <td>
      LLM Metacognition
+     <ul>
+        <li>
+            <a href="https://arxiv.org/abs/2405.12205">Metacognitive Capabilities of LLMs: An Exploration in Mathematical Problem Solving</a>
+        </li>
+     </ul>
     </td>
     <td>
+        <ul>
+            <li>
+                <a href="https://arxiv.org/abs/2407.21009">AI-Assisted Generation of Difficult Math Questions</a>
+            </li>
+            <li>
+                <a href="https://arxiv.org/abs/2408.14774">Instruct-SkillMix: A Powerful Pipeline for LLM Instruction Tuning</a>
+            </li>
+        </ul>
     </td>
     <td>
+        <a href="https://forms.gle/muxedaKSMxhPK9qS8">[link]</a>
     </td>
     <td>
       Paper: <a href="https://arxiv.org/abs/2406.06560">Inverse Constitutional AI: Compressing Preferences into Principles</a><br>
