Update criticsfor Oct 9

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
     <td>
       Paper: <a href="https://arxiv.org/abs/2406.06560">Inverse Constitutional AI: Compressing Preferences into Principles</a><br>
      Presenter: Zixuan Wang<br/>
- Critics: <ul><li>Rafael Pastrana Jimenez</li><li>Dillon Lue</li></ul>
+ Critics: <ul><li><s>Rafael Pastrana Jimenez</s></li><li>Dillon Lue</li></ul>
  Proponents: <ul><li>Sreemanti Dey</li><li>Jane E. Castleman</li></ul>
     </td>
     <td>
