Update scribes for Oct 9

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
  Proponents: <ul><li>Sreemanti Dey</li><li>Jane E. Castleman</li></ul>
     </td>
     <td>
-     <ul><li>Wenzhe Li</li><li>Mingqian Xue</li><li>Rafael Pastrana Jimenez</li></ul>
+     <ul><li>Wenzhe Li</li><li>Mingqian Xue</li><li><s>Rafael Pastrana Jimenez</s></li></ul>
     </td>
    </tr>
    <!-- week 7 -->
