Update Oct 2 and Oct 7

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
     </td>
     <td>
       Paper: <a href="https://arxiv.org/abs/2305.11206">LIMA: Less Is More for Alignment</a><br>
-     Presenter: Mahsa Bastankhah<br/>
+     Presenter: <s>Mahsa Bastankhah</s><br/>
  Critics: <ul><li>Niusha Moshrefi</li><li>Zeyu Shen</li></ul>
  Proponents: <ul><li>Jiaxin Xiao</li><li>Wuwei Zhang</li></ul>
     </td>
@@ -554,7 +554,7 @@
  Proponents: <ul><li>Benedikt P. Stroebl</li><li>Kincaid MacDonald</li></ul>
     </td>
     <td>
-     <ul><li>Juhyun Park</li><li>Wentao Guo</li><li>Mahsa Bastankhah</li></ul>
+     <ul><li>Juhyun Park</li><li>Wentao Guo</li><li><s>Mahsa Bastankhah</s></li></ul>
     </td>
    </tr>
    <tr>
