add lec10 slides

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
      Sanjeev
     </td>
     <td>
-     Constitutional AI
+     Constitutional AI <a href="lectures/lec10-ConstitutionalAI.pdf">[slides]</a>
       <ul>
       <li> <a href="https://arxiv.org/abs/2212.08073">Constitutional AI: Harmlessness from AI Feedback</a></li>
      </ul>
