add lec11 slides

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
      Sanjeev
     </td>
     <td>
-     LLM Metacognition
+     LLM Metacognition <a href="lectures/lec11-Metacognition.pdf">[slides]</a>
      <ul>
         <li>
             <a href="https://arxiv.org/abs/2405.12205">Metacognitive Capabilities of LLMs: An Exploration in Mathematical Problem Solving</a>
