--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <li><b>Lecture scribing (10%)</b>: For each lecture, we will ask 3 students to scribe the lecture content, covering the technical content and research questions.
             <ul>
                 <li>You can find the Overleaf scribe template <a href="https://www.overleaf.com/read/yjmgcqgyhsyw#99652f">here</a>. Make a shared copy between all the scribes for a given lecture. It is up to you how to divide up the work so that it is equal. Send your completed Overleaf link + PDF to Adithya and Tyler on Slack <b>by 11:59pm three days after the lecture</b>. For Monday lectures, this is 11:59pm on Thursday. For Wednesday Lectures, this is 11:59pm on Saturday.</li>
-                <li>Please also add the four course instructors on the Overleaf as editors at our emails above. </li>
+                <li>Please do not add the four course instructors on the Overleaf, but instead share the editable link with Adithya and Tyler.</li>
                 <li>New to the template is a <b>contributions section</b>, please do fill this out when you submit with an overview of each scribe's split.</li>
             </ul></li>
           <li><b>Final project (35% + 10% for presentations)</b>: At the end of the semester, everyone is required to do a class project related to modern LLMs and submit a final paper. You should work as a <b>team of 2 or 3</b>. Everyone is required to submit a proposal to Gradescope by <b>Oct 13th (Sunday) 11:59pm</b>, and the final paper on the Dean's Date (<b>Dec 13th 11:59 pm</b>). In-class project presentations will be scheduled in the last three lectures.
