--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
      Tianyu
     </td>
     <td>
-     TBD
+     Long-context models
     </td>
     <td>
     </td>
@@ -626,16 +626,17 @@
      Oct 23 (Wed)
     </td>
     <td>
-     TBD
+     Sanjeev
     </td>
     <td>
-     TBD
+     Advanced topics in alignment
     </td>
     <td>
     </td>
     <td>
     </td>
     <td>
+      Paper: <a href="https://arxiv.org/abs/2305.19466">The Impact of Positional Encoding on Length Generalization in Transformers</a> <br>
      Presenter: Ambri Ma<br/>
  Critics: <ul><li>Colin Wang</li><li>Jiahao Qiu</li></ul>
  Proponents: <ul><li>Brendan Y. Wang</li><li>David B. Braun</li></ul>
@@ -697,10 +698,10 @@
      Nov 4 (Mon)
     </td>
     <td>
-     Mengzhou
+     TBD
     </td>
     <td>
-     Code and math models
+     Topid TBD
     </td>
     <td>
     </td>
@@ -720,10 +721,10 @@
      Nov 6 (Wed)
     </td>
     <td>
-     TBD
+     Mengzhou
     </td>
     <td>
-     Topic TBD
+     Small models
     </td>
     <td>
     </td>
