--- a/index.html
+++ b/index.html
@@ -613,6 +613,7 @@
     <td>
     </td>
     <td>
+      Paper: <a href="https://arxiv.org/abs/2207.05221">Language Models (Mostly) Know What They Know</a> <br>
      Presenter: Arin J. Mukherjee<br/>
  Critics: <ul><li>Seth Karten</li><li>Veniamin Veselovskyy</li></ul>
  Proponents: <ul><li>Yuka Shu</li><li>Keerthana Nallamotu</li></ul>
