Added readings for Oct 21

--- a/index.html
+++ b/index.html
@@ -603,12 +603,40 @@
      Oct 21 (Mon)
     </td>
     <td>
-     Tianyu
+     Tianyu Gao
     </td>
     <td>
      Long-context models
+        <ul>
+            <li>
+                <a href="https://arxiv.org/abs/2410.02660">How to Train Long-Context Language Models (Effectively)</a>
+            </li>
+        </ul>
+    Positional embeddings
+        <ul>
+            <li>
+                <a href="https://arxiv.org/abs/2104.09864">RoFormer: Enhanced Transformer with Rotary Position Embedding</a>
+            </li>
+        </ul>
     </td>
     <td>
+        <ul>
+            <li>
+                <a href="https://arxiv.org/abs/2409.12181">A Controlled Study on Long Context Extension and Generalization in LLMs</a>
+            </li>
+            <li>
+                <a href="https://arxiv.org/abs/2404.06654">RULER: What’s the Real Context Size of Your Long-Context Language Models?</a>
+            </li>
+            <li>
+                <a href="https://arxiv.org/abs/2309.16039">Effective Long-Context Scaling of Foundation Models</a>
+            </li>
+            <li>
+                <a href="https://arxiv.org/abs/2402.10171">Data Engineering for Scaling Language Models to 128K Context</a>
+            </li>
+            <li>
+                <a href="https://arxiv.org/abs/2309.17453">Efficient Streaming Language Models with Attention Sinks</a>
+            </li>
+        </ul>
     </td>
     <td>
     </td>
