Add readings for Oct 23

--- a/index.html
+++ b/index.html
@@ -657,8 +657,17 @@
     </td>
     <td>
      Advanced topics in alignment
+        <ul>
+            <li>
+                <a href="https://cdn.openai.com/o1-system-card-20240917.pdf">OpenAI o1 System Card</a> (skim this and note anything interesting)
+            </li>
+            <li>
+                <a href="https://arxiv.org/abs/2312.09390">Weak-to-Strong Generalization: Eliciting Strong Capabilities With Weak Supervision</a> (Section 4.2 + skim the rest)
+            </li>
+        </ul>
     </td>
     <td>
+        The <a href="https://openai.com/index/debate/">AI through debate</a> blog post.
     </td>
     <td>
     </td>
