--- a/index.html
+++ b/index.html
@@ -670,6 +670,7 @@
         The <a href="https://openai.com/index/debate/">AI through debate</a> blog post.
     </td>
     <td>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw2GFckWkuOHQ44uxj2Hc2kQb-IyZifmUq_TBzxodlx5cZaw/viewform?usp=sf_link">[link]</a>
     </td>
     <td>
       Paper: <a href="https://arxiv.org/abs/2305.19466">The Impact of Positional Encoding on Length Generalization in Transformers</a> <br>
