Added optional reading for Oct 23

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
         </ul>
     </td>
     <td>
-        The <a href="https://openai.com/index/debate/">AI through debate</a> blog post.
+        The AI through debate <a href="https://openai.com/index/debate/">blog post</a> and <a href="https://futureoflife.org/podcast/ai-alignment-through-debate-with-geoffrey-irving/">interview</a>.
     </td>
     <td>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw2GFckWkuOHQ44uxj2Hc2kQb-IyZifmUq_TBzxodlx5cZaw/viewform?usp=sf_link">[link]</a>
