--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                 <a href="https://cdn.openai.com/o1-system-card-20240917.pdf">OpenAI o1 System Card</a> (skim this and note anything interesting)
             </li>
             <li>
-                <a href="https://arxiv.org/abs/2312.09390">Weak-to-Strong Generalization: Eliciting Strong Capabilities With Weak Supervision</a> (Section 4.2 + skim the rest)
+                <a href="https://arxiv.org/abs/2312.09390">Weak-to-Strong Generalization: Eliciting Strong Capabilities With Weak Supervision</a> (Read through section 4.2 + skim the rest)
             </li>
         </ul>
     </td>
