--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
      Tianyu Gao
     </td>
     <td>
-     Long-context models
+     Long-context models <a href="lectures/lec12-long-context.pdf">[slides]</a>
         <ul>
             <li>
                 <a href="https://arxiv.org/abs/2410.02660">How to Train Long-Context Language Models (Effectively)</a>
