--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
      Sanjeev
     </td>
     <td>
-     Advanced topics in alignment
+     Advanced topics in alignment <a href="lectures/lec13-MoreAlignment.pdf">[slides]</a>
         <ul>
             <li>
                 <a href="https://cdn.openai.com/o1-system-card-20240917.pdf">OpenAI o1 System Card</a> (skim this and note anything interesting)
