Added debate papers for 10/28 and 10/30

--- a/index.html
+++ b/index.html
@@ -698,6 +698,9 @@
     <td>
     </td>
     <td>
+    Paper: <a href="https://arxiv.org/abs/2406.11741">
+        Transcendence: Generative Models Can Outperform The Experts That Train Them
+    </a><br/>
      Presenter: Jiayi Zhang<br/>
  Critics: <ul><li>Catherine Cheng</li><li>Juhyun Park</li></ul>
  Proponents: <ul><li>Wentao Guo</li><li>Sijia Liu</li></ul>
@@ -721,6 +724,9 @@
     <td>
     </td>
     <td>
+    Paper: <a href="https://arxiv.org/abs/2404.03683">
+        Stream of Search (SoS): Learning to Search in Language
+    </a><br/>
      Presenter: Constantin Schesch<br/>
  Critics: <ul><li>Yinghui He</li><li>Yijun Yin</li></ul>
  Proponents: <ul><li>Haichen Dong</li><li>Amey P. Pasarkar</li></ul>
