Added Saining Xie

--- a/index.html
+++ b/index.html
@@ -852,10 +852,10 @@
      Nov 20 (Wed)
     </td>
     <td>
-     Guest
+     Saining Xie (NYU)
     </td>
     <td>
-     Guest Lecture #4
+     Multimodal LLMs
     </td>
     <td>
     </td>
