Add Oct 28 lecture

--- a/index.html
+++ b/index.html
@@ -688,14 +688,26 @@
      Oct 28 (Mon)
     </td>
     <td>
-     TBD
+     Danqi
     </td>
     <td>
-     Topic TBD
+     Mathematical reasoning
+    <ul>
+        <li>
+            <a href="https://arxiv.org/abs/2305.20050">Let's Verify Step by Step</a>
+        </li>
+        <li>
+            <a href="https://arxiv.org/abs/2406.06592">Improve Mathematical Reasoning in Language Models by Automated Process Supervision</a>
+        </li>
+    </ul>
     </td>
     <td>
+        <li>
+            <a href="https://arxiv.org/abs/2312.08935">Math-Shepherd: Verify and Reinforce LLMs Step-by-step without Human Annotations</a>
+        </li>
     </td>
     <td>
+      <a href="https://forms.gle/AaLvDhpf7ZENHmWy9">[link]</a>
     </td>
     <td>
     Paper: <a href="https://arxiv.org/abs/2406.11741">
@@ -714,7 +726,7 @@
      Oct 30 (Wed)
     </td>
     <td>
-     TBD
+     Danqi
     </td>
     <td>
      Topic TBD
